crates/alder-driver/src/snapshots/alder_driver__compile__tests__named_reexport_cannot_publish_a_private_value.snap
---
source: crates/alder-driver/src/compile.rs
description: "pub import ~/leaf.{ secret }"
---
alder::canonicalize::private_name

  × `secret` is private
   ╭─[/project/src/facade.ald:1:21]
 1 │ pub import ~/leaf.{ secret }
   ·                     ───┬──
   ·                        ╰── reported here
   ╰────
