crates/alder-driver/src/snapshots/alder_driver__compile__tests__nested_pins_do_not_complete_result_coverage@ok_payload.snap
---
source: crates/alder-driver/src/compile.rs
description: "pub fn inspect(value: Result[Number, [:failed]], expected: Number) Number {\n    match value { Ok(^expected) => 0, Err(_) => 1 }\n}\n"
---
alder::type::non_exhaustive_error_match

  × this match does not cover every Result
   ╭─[/app/src/main.ald:2:5]
 1 │ pub fn inspect(value: Result[Number, [:failed]], expected: Number) Number {
 2 │     match value { Ok(^expected) => 0, Err(_) => 1 }
   ·     ───────────────────────┬───────────────────────
   ·                            ╰── missing Ok
 3 │ }
   ╰────
  help: add an arm for each missing Result case
