crates/alder-driver/src/snapshots/alder_driver__compile__tests__nested_record_equality_does_not_form_a_display_name_cycle.snap
---
source: crates/alder-driver/src/compile.rs
description: "pub fn invalid(left: { inner: { value: fn(Number) Number } }, right: { inner: { value: fn(Number) Number } }) Bool {\n    left == right\n}\n"
---
alder::trait::missing_instance

  × no implementation of `Eq[fn(Number) Number]` was found
   ╭─[/app/src/main.ald:2:10]
 1 │ pub fn invalid(left: { inner: { value: fn(Number) Number } }, right: { inner: { value: fn(Number) Number } }) Bool {
 2 │     left == right
   ·          ─┬
   ·           ╰── this use needs trait evidence
 3 │ }
   ╰────
  help: functions cannot be compared for equality; compare the data that
        represents what you need to distinguish instead
        
        obligation chain:
          Eq[{ inner: { value: fn(Number) Number } }]
          -> Eq[{ value: fn(Number) Number }]
          -> Eq[fn(Number) Number]
